# rsos

./: Cargo.toml  Makefile  README.md  rust-toolchain.toml  x86_64-rsos.json
.cargo/: config.toml
setup/: grub.cfg  grub_test.cfg  linker.ld  runner.sh
src/: boot.asm  framebuffer.rs  globals.rs  io_port.rs  kernel.rs  lib.rs  logger.rs  main.rs  multiboot2.rs  serial.rs  vga_buffer.rs
src/data_structures/: bitmap.rs  bitmap_ref_mut.rs  mapped_rwlockreadguard.rs  mod.rs
src/graphics/: framebuffer.rs  graphics_renderer.rs  mod.rs
src/graphics/klogger/: font_renderer.rs  mod.rs  painter.rs
src/interrupts/: gdt.rs  mod.rs  tss.rs
src/macros/: kprint.rs  mod.rs  print.rs  serial.rs
src/memory/: mod.rs  simple_frame_allocator.rs  simple_heap_allocator.rs
src/memory/cr3/: mod.rs
src/memory/frames/: bitmap_frame_allocator.rs  mod.rs  simple_frame_allocator.rs
src/memory/pages/: mod.rs  simple_page_allocator.rs  temporary_page_allocator.rs
src/multiboot2/: acpi_new_rsdp.rs  apm_table.rs  basic_memory_info.rs  bios_boot_device.rs  boot_loader_name.rs  cmd_line.rs  efi_boot_services_not_terminated.rs  efi_image_handle.rs  efi_system_table.rs  elf_symbols.rs  framebuffer_info.rs  image_load_base_phy_addr.rs  memory_map.rs  mod.rs  modules.rs  tag_iter.rs  tag_trait.rs  vbe_info.rs
src/multiboot2_test/: apm_table.rs  basic_memory_info.rs  boot_loader_name.rs  cmd_line.rs  efi_boot_services_not_terminated.rs  elf_symbols.rs  mod.rs  modules.rs  tag_trait.rs
src/setup/: boot.asm  grub.cfg  linker.ld
tests/: basic_boot.rs  heap_allocation.rs
(+10 files in other folders)
