[package]
name = "rsos"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
bitflags = "2.6.0"
# multiboot2 = { version = "0.20.2", default-features = false }
ptr_meta = { version = "0.3.0", default-features = false, features = ["derive", "ptr_meta_derive"] }
spin = "0.9.8"

[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]
